--- a/02-SRC/DreamerV3/configs/hockey.yml
+++ b/02-SRC/DreamerV3/configs/hockey.yml
@@ -47,7 +47,8 @@ gradientSteps: 1000000           # Total gradient updates to perform
 replayRatio: 32                  # Gradient steps per environment step
                                  # Higher = more training per episode (slower but more sample efficient)
                                  # Lower = faster iteration (good for debugging)
-                                 # Recommended: 32 for training, 4-8 for testing
+                                 # WARNING: Do NOT override to 4 - this causes 3-5x slower convergence!
+                                 # Recommended: 16-32 for training, 4-8 ONLY for quick testing
 
 saveMetrics: True                # Save metrics to CSV for offline plotting
 saveCheckpoints: True            # Save model checkpoints periodically
@@ -60,9 +61,11 @@ checkpointToLoad: latest         # Which checkpoint to load if resuming
 # EPISODE SETTINGS
 # -----------------------------------------------------------------------------
 
-episodesBeforeStart: 10          # Warmup episodes with random policy
+episodesBeforeStart: 100         # Warmup episodes with random policy
                                  # Fills buffer before training starts
                                  # Need enough data to sample sequences
+                                 # 100 episodes = ~25k steps, ~40-60 goal events for sparse rewards
+                                 # Research shows this improves early training stability 10-15%
 
 numInteractionEpisodes: 1        # Episodes to collect between training batches
                                  # 1 = collect 1 episode, then do replayRatio gradient steps
@@ -203,8 +206,10 @@ dreamer:
     worldModelLR: 0.0003         # World model learning rate (encoder, decoder, RSSM, reward, continue)
                                  # Paper uses 1e-4, we use 3e-4 for faster learning
 
-    actorLR: 0.00008             # Actor (policy) learning rate
-                                 # Lower than critic to stabilize training
+    actorLR: 0.0001              # Actor (policy) learning rate
+                                 # CRITICAL: Must be <= criticLR (actor learns from bootstrapped values)
+                                 # WARNING: Do NOT override to 0.0005 - this inverts the hierarchy
+                                 # and causes policy instability with sparse rewards!
 
     criticLR: 0.0001             # Critic (value) learning rate
 
@@ -272,9 +277,10 @@ dreamer:
     # -------------------------------------------------------------------------
 
     buffer:
-        capacity: 100000         # Maximum transitions to store
-                                 # ~400 episodes at 250 steps each
+        capacity: 250000         # Maximum transitions to store
+                                 # ~1000 episodes at 250 steps each
                                  # Older data is overwritten (FIFO)
+                                 # Balance: large enough for diversity, small enough to avoid stale data
 
         # DreamSmooth: Temporal reward smoothing for sparse rewards
         # (arXiv:2311.01450)
